(library
 (public_name collect)
 (name collect)
 (modules Diff Collector)
 (wrapped false)
 (libraries ocaml-migrate-parsetree unix)
)

(library
  (name ppx_info)
  (wrapped false)
  (kind ppx_rewriter)
  (modules Ppx_info)
  (libraries collect ocaml-migrate-parsetree)
)

(executable
  (name rewriter)
  (modules Rewriter)
  (libraries ppx_info ppxlib))

(executable
 (public_name main)
 (name main)
 (promote (until-clean))
 (libraries ocaml-migrate-parsetree collect)
 (modules main)
)
